--- a/StockManagement/Views/Home/Index.cshtml
+++ b/StockManagement/Views/Home/Index.cshtml
@@ -2,11 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 <style>
-    /*body {background-color: powderblue;}
-    h1   {color: blue;}
-    p    {color: red;}*/
+    body {background-color: whitesmoke;}
+    h1   {color: orangered;}
+    p    {color: red;}
+    h1 {
+        {color: orangered;}
+        font-family: "Lucida Console", "Courier New", monospace;
+    }
 </style>
 <div class="text-center">
-    <h1 class="display-4">Welcome to Stock Management</h1>
+    <h1 class="display-4" font:>Welcome to Stock Management</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
