Commit List Data, Add Data for Branch 3 ASP

--- a/StockManagement/Views/ItemType/List.cshtml
+++ b/StockManagement/Views/ItemType/List.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model List<StockManagement.Models.ViewModels.ItemTypeListModel>
+
 <div class="bg-secondary bg-opacity-10">
     <div class="container">
         <div class="d-flex justify-content-between align-items-center p-2">
@@ -28,16 +29,27 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>1</td>
-            <td>Water</td>
-            <td>Water.png</td>
-            <td>Water</td>
-            <td class="text-center">
-                    <button class="btn btn-primary">Edit</button>
-                    <button class="btn btn-danger">Delete</button>
-            </td>
-        </tr>
+        @if (Model != null && Model.Any())
+        {
+            @foreach (var itemType in Model)
+            {
+                <tr>
+                    <td>@itemType.Id</td>
+                    <td>@itemType.Name</td>
+                    <td>@itemType.Image</td>
+                    <td>@itemType.Note</td>
+                    <td class="text-center">
+                        <button class="btn btn-primary">Edit</button>
+                        <button class="btn btn-danger">Delete</button>
+                    </td>
+                </tr>
+            }
+        }else
+        {
+            
+        }
+        
+
         </tbody>
     </table>
 </div>
