Commit after AutoMapper

--- a/StockManagement/Views/ItemType/List.cshtml
+++ b/StockManagement/Views/ItemType/List.cshtml
@@ -39,8 +39,18 @@
                     <td>@itemType.Image</td>
                     <td>@itemType.Note</td>
                     <td class="text-center">
-                        <button class="btn btn-primary">Edit</button>
-                        <button class="btn btn-danger">Delete</button>
+                        <a class="btn btn-primary"
+                           asp-area=""
+                           asp-controller="ItemType"
+                           asp-action="Edit"
+                           asp-route-id="@itemType.Id"
+                           >Edit</a>
+                        <a class="btn btn-danger"
+                           asp-area=""
+                           asp-controller="ItemType"
+                           asp-action="Delete"
+                           asp-route-id="@itemType.Id"
+                           >Delete</a>
                     </td>
                 </tr>
             }
