--- a/StockManagement/Views/Shared/_Layout.cshtml
+++ b/StockManagement/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <a class="nav-link text-dark" asp-area="" asp-controller="ItemType" asp-action="List">ItemType</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Unit" asp-action="List">Unit</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                 </ul>
